--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 body {
     font-family: 'Roboto', sans-serif;
 }
@@ -27,6 +25,7 @@ body {
 
 .container-header .section-header ul {
     display: flex;
+    padding: 0;
 }
 
 .container-header .section-header ul li {
@@ -35,25 +34,61 @@ body {
 }
 
 .container-main {
-    width: 1200px;
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 1200px;
     margin: 0 auto;
     margin-top: 40px;
-    display: flex;
-    justify-content: space-between;
 }
 
 .container-main ul {
+    max-width: 1000px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    gap: 20px;
 }
 
-.container-main ul li {
-    max-width: 200px;
+.container-main ul li nav {
+    max-width: 240px;
     padding: 10px;
+    border: 2px solid #F5F5F5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.container-main ul li figure {
+    background-color: #F5F5F5;
+    width: 100%;
+}
+
+.container-main ul li figure img {
+    margin: 0 15%;
+}
+
+.container-main ul li #p-categoria {
+    background-color: #37268C;
+    color: #ffff;
+    padding: 5px;
+}
+
+.container-main ul li h2 {
+    font-weight: bold;
+    color: #37268C;
+}
+
+.container-main ul li button {
+    border: none;
+    background-color: #ffff;
+    font-size: 16px;
+    padding: 0;
 }
 
 .container-main aside {
+    max-width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -62,8 +97,34 @@ body {
     gap: 25px;
 }
 
+.busca {
+    display: flex;
+    justify-content: space-between;
+    width: 280px;
+}
+
+.busca input {
+    background-color: #F5F5F5;
+    border: none;
+    padding: 10px;
+    width: 175px;
+    height: 20px;
+}
+
+.busca input::placeholder {
+    color: #333333;
+}
+
+.busca button {
+    background-color: #37268C;
+    color: #ffff;
+    border: none;
+    padding: 10px;
+    width: 75px;
+}
+
 .carrinho {
-    width: 250px;
+    width: 280px;
     height: 250px;
     display: flex;
     flex-direction: column;
