--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2? family= Roboto & display=swap');
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto' sans-serif;
 }
 
 .container-header {
@@ -25,14 +27,19 @@ body {
 
 .container-header .section-header ul {
     display: flex;
-    gap: 10px;
+    gap: 15px;
     padding: 0;
 }
 
-.container-header .section-header .header-nav {
-    padding: 10px;
-    font-size: 14px;
+.container-header .section-header li button {
+    padding: 5px;
+    font-size: 16px;
+    background-color: #ffff;
+    border: none;
+}
 
+.container-header .section-header li button:hover {
+    font-weight: bold;
 }
 
 .container-main {
@@ -49,6 +56,10 @@ body {
     flex-wrap: wrap;
     justify-content: flex-start;
     gap: 20px;
+}
+
+.container-main ul li:hover {
+    border: 2px solid #37268C;
 }
 
 .container-main ul li nav {
@@ -89,6 +100,11 @@ body {
     padding: 0;
 }
 
+.container-main ul li button:hover {
+    text-decoration: underline;
+    color: #37268C;
+}
+
 .container-main aside {
     max-width: 300px;
     display: flex;
@@ -109,8 +125,12 @@ body {
     background-color: #F5F5F5;
     border: none;
     padding: 10px;
-    width: 175px;
+    width: 170px;
     height: 20px;
+}
+
+.busca input:hover {
+    border: 2px solid #37268C;
 }
 
 .busca input::placeholder {
@@ -122,7 +142,12 @@ body {
     color: #ffff;
     border: none;
     padding: 10px;
-    width: 75px;
+    width: 80px;
+}
+
+.busca button:hover {
+    background-color: #2E245E;
+    color: #ffff;
 }
 
 .carrinho {
