--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2? family= Roboto & display=swap');
 
 body {
-    font-family: 'Roboto' sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container-header {
@@ -19,7 +18,6 @@ body {
 }
 
 .container-header .section-header h1 {
-
     font-weight: bold;
     font-size: 28px;
     color: #333333;
@@ -35,7 +33,7 @@ body {
     padding: 5px;
     font-size: 16px;
     background-color: #ffff;
-    border: none;
+    border: 2px solid #ffff;
 }
 
 .container-header .section-header li button:hover {
@@ -58,6 +56,9 @@ body {
     gap: 20px;
 }
 
+.container-main ul li {
+    border: 2px solid #ffff;
+}
 .container-main ul li:hover {
     border: 2px solid #37268C;
 }
@@ -127,6 +128,7 @@ body {
     padding: 10px;
     width: 170px;
     height: 20px;
+    border: 2px solid #ffff;
 }
 
 .busca input:hover {
