--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Roboto', sans-serif;
 }
@@ -38,6 +37,7 @@ body {
 
 .container-header .section-header li button:hover {
     font-weight: bold;
+    transform: scale(1.2);
 }
 
 .container-main {
@@ -59,8 +59,10 @@ body {
 .container-main ul li {
     border: 2px solid #ffff;
 }
+
 .container-main ul li:hover {
     border: 2px solid #37268C;
+    transform: scale(1.1);
 }
 
 .container-main ul li nav {
@@ -94,6 +96,10 @@ body {
     color: #37268C;
 }
 
+.container-main ul li h3 {
+    font-weight: bold;
+    color: #2E245E;
+}
 .container-main ul li button {
     border: none;
     background-color: #ffff;
@@ -104,10 +110,11 @@ body {
 .container-main ul li button:hover {
     text-decoration: underline;
     color: #37268C;
+    font-weight: bold;
 }
 
 .container-main aside {
-    max-width: 300px;
+    width: 350px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -119,15 +126,15 @@ body {
 .busca {
     display: flex;
     justify-content: space-between;
-    width: 280px;
+    width: 300px;
 }
 
 .busca input {
     background-color: #F5F5F5;
     border: none;
     padding: 10px;
-    width: 170px;
-    height: 20px;
+    width: 180px;
+    height: 25px;
     border: 2px solid #ffff;
 }
 
@@ -143,7 +150,7 @@ body {
     background-color: #37268C;
     color: #ffff;
     border: none;
-    padding: 10px;
+    padding: 5px;
     width: 80px;
 }
 
@@ -153,8 +160,8 @@ body {
 }
 
 .carrinho {
-    width: 280px;
-    height: 250px;
+    width: 300px;
+    height: 330px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -173,6 +180,85 @@ body {
 }
 
 .carrinho main {
-    margin-top: 30%;
+    margin-top: 10px;
     background-color: #F5F5F5;
 }
+
+
+.main-carrinho {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.main-carrinho h2 {
+    margin-top: 50%;
+}
+
+.main-carrinho #ul-carrinho {
+    width: 280px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    align-content: flex-start;
+    overflow-x: auto;
+}
+
+#ul-carrinho li {
+    width: 260px;
+    height: 80px;
+    display: flex;
+    justify-content: flex-start;
+    align-content: space-around;
+    align-items: center;
+    gap: 40px;
+    border: none;
+}
+
+#ul-carrinho li:hover {
+    transform: unset;
+}
+
+#ul-carrinho figure {
+    width: 90px;
+}
+
+#ul-carrinho img {
+    height: 80px;
+    width: 80px;
+    background-color: #ffff;
+}
+
+#ul-carrinho li div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+#ul-carrinho li div h3 {
+    font-size: 14px;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+#ul-carrinho li div p {
+    color: #37268C;
+    font-weight: bold;
+}
+
+#ul-carrinho li div button {
+    background-color: #F5F5F5;
+}
+
+/* .carrinho-total {
+    background-color: black;
+    color: #ffff;
+    width: 100%;
+    height: 90px;
+    padding-top: 20px;
+    padding-bottom: 60px;
+} */
